[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/WFpanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/CommandCard.gd" type="Script" id=2]
[ext_resource path="res://assets/menuFontMedium.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/default_theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/Tex_skill_61.PNG" type="Texture" id=5]
[ext_resource path="res://assets/Tex_skill_21.PNG" type="Texture" id=6]
[ext_resource path="res://assets/healthtick.svg" type="Texture" id=7]
[ext_resource path="res://assets/sfx/zapsplat_multimedia_notification_short_digital_futuristic_beep_generic_008_53944.mp3.ogg" type="AudioStream" id=8]
[ext_resource path="res://assets/small_font.tres" type="DynamicFont" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Animation" id=2]
resource_name = "display"

[node name="CommandCard" type="Control"]
anchor_left = 0.426794
anchor_right = 0.646
anchor_bottom = 0.651
margin_right = 0.564575
margin_bottom = 0.0320129
rect_min_size = Vector2( 300, 500 )
rect_pivot_offset = Vector2( 150, 250 )
rect_clip_content = true
mouse_default_cursor_shape = 2
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_right = -3.05176e-05
margin_bottom = -15.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.0784314 )
light_mask = 2048
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 22.0
margin_top = 13.0
margin_right = -17.0
margin_bottom = -24.0
mouse_filter = 2
texture = ExtResource( 5 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WFpanel" parent="." instance=ExtResource( 1 )]
margin_top = -1.88775
margin_bottom = -1.88776
rect_min_size = Vector2( 200, 0 )
border_color = Color( 0.0392157, 0.419608, 0.564706, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 10
custom_constants/margin_top = 14
custom_constants/margin_left = 10
custom_constants/margin_bottom = 14
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 14.0
margin_right = 290.0
margin_bottom = 486.0
mouse_filter = 2
custom_constants/separation = 10

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 3 )
align = 1
autowrap = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 280.0
margin_bottom = 53.0

[node name="About" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 280.0
margin_bottom = 213.0
rect_min_size = Vector2( 0, 150 )
custom_fonts/font = ExtResource( 9 )
autowrap = true

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 223.0
margin_right = 280.0
margin_bottom = 227.0

[node name="Stats" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 237.0
margin_right = 280.0
margin_bottom = 337.0
rect_min_size = Vector2( 0, 100 )
rect_clip_content = true
custom_constants/separation = 0

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 280.0
margin_bottom = 351.0

[node name="CardIcon" type="TextureRect" parent="."]
modulate = Color( 0.537255, 0.45098, 0.121569, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -143.0
margin_top = -159.0
margin_right = -19.0
margin_bottom = -35.0
mouse_filter = 2
texture = ExtResource( 6 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.388235 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/display = SubResource( 2 )

[node name="Confirm" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="Error" type="AudioStreamPlayer" parent="."]

[node name="Light2D" type="Light2D" parent="."]
visible = false
position = Vector2( 184.771, 370.721 )
scale = Vector2( 2.06658, 29.8557 )
texture = ExtResource( 7 )
offset = Vector2( 8.78882, -2.60926 )

[node name="CP" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -57.0
margin_right = 140.0
margin_bottom = -23.0
rect_min_size = Vector2( 0, 34 )
rect_clip_content = true
mouse_filter = 2
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CP"]
margin_right = 60.0
margin_bottom = 34.0
text = " CP:"
[connection signal="display" from="." to="." method="_on_CommandCard_display"]
[connection signal="gui_input" from="." to="." method="_on_CommandCard_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_CommandCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CommandCard_mouse_exited"]
